# pattern-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  build.bat
compat/simde-shim/: immintrin.h
include/: pattern_entry.h  rdtsc.h
patterns/: baseline.cpp  brick.cpp  can.cpp  cfx.cpp  darth_ton.cpp  forza.cpp  legacy_extras.cpp  libhat.cpp  lightning_scanner.cpp  mrexodia.cpp  pattern16.cpp  peribunt.cpp  qis.cpp  sig.cpp  std_regex.cpp  tbs.cpp  x64dbg.cpp  x64dbg_bmh.cpp
src/: main.cpp  pattern_entry.cpp
